# TodoAppCPP

./: CMakeLists.txt  JsonManager.cpp  JsonManager.h  README.md  Todo.cpp  Todo.h  TodoManager.cpp  TodoManager.h  UI.cpp  UI.h  main.cpp  vcpkg.json
